--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;900&family=Roboto:wght@100;400;700&display=swap');
+
 html,
 body {
   padding: 0;
